--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -201,5 +201,6 @@ Select Start and press the button you want the app to learn."</string>
     <string name="pref_title_build_version">Build version</string>
     <string name="not_supported">Your device is not supported!</string>
     <string name="small_info">Infrared Remote Control for Sony Xperia ZL and Sony Xperia Tab Z</string>
+    <string name="control">Control</string>
 
 </resources>
